app/assets/stylesheets/_orders.scss
//  Copyright (c) 2006-2017, Puzzle ITC GmbH. This file is part of
//  PuzzleTime and licensed under the Affero General Public License version 3
//  or later. See the COPYING file at the top-level directory or at
//  https://github.com/puzzle/puzzletime.

.orders-header {
  padding: 15px $grid-gutter-width 0 $grid-gutter-width;
  background-color: $gray-lighter;

  .back {
    padding-top: 7px;
  }

  .order-search {
    @include clearfix;

    label {
      float: left;
      margin-right: 20px;
      padding-top: 7px;
    }
    input {
      width: 500px;
    }
  }

  .nav-tabs {
    margin-top: 20px;
    margin-left: -$grid-gutter-width;
    margin-bottom: 0;
    margin-right: -$grid-gutter-width;
    padding: 0 $grid-gutter-width;
  }
}

.orders-header + main {
  padding-top: 25px;
}

h1.top {
  margin-top: 0;
}

.orders-actions {
  padding-top: 20px;

  & > * {
    float: left;
    margin-right: 40px;
  }
}

.orders-cockpit {
  .cockpit-header {
    @include clearfix;
    margin: 0 auto;
  }

  .filter-elements {
    margin-top: 30px;
    margin-bottom: 10px;
  }

  .cockpit-header-item {
    float: left;
    margin-right: 50px;
    padding-bottom: 25px;

    .data-item {
      clear: both;

      .figure-label {
        margin-right: 20px;
        float: left;
        line-height: 250%;
      }
      .figure {
        text-align: right;
        float: right;
      }
      .unit {
        margin-right: 30px;
      }
    }
  }

  .title,
  .figure,
  .unit {
    color: $gray-darker;
  }

  .title {
    display: flex;
    align-items: baseline;

    > a {
      margin-right: auto;
    }
  }

  .figure {
    font-size: 18px;
    font-weight: 500;

    &.small {
      font-size: 14px;
      line-height: 200%;
      font-weight: 400;
    }
  }

  .figure-label,
  .unit {
    font-size: 12px;
    font-weight: 400;
  }

  .cockpit-table {
    position: relative;
    width: 100%;
  }

  // First column with fixed width, the scrollable one is fluid
  $static-width: 270px;

  // Each row height = 3 lines + vertical padding
  $row-line-height: 24px;
  $cell-padding: 12px;

  table.static,
  .scrollable table {
    table-layout: fixed;

    tr {
      border-top: 1px solid $gray-light;
      &:last-child {
        border-bottom: 1px solid $gray-light;
      }

      [class^='icon-'],
      [class*=' icon-'] {
        color: $brand-primary;
      }
    }
    td,
    th {
      width: 170px;
      min-width: 170px;
      padding: $cell-padding;
      @include ellipsis(true);
    }

    td {
      height: ($row-line-height * 3) + ($cell-padding * 3);
      vertical-align: top;
    }

    th {
      background-color: #f4f4f4;
    }
    th > span {
      border-bottom: 1px dashed #aaa;
      cursor: help;
    }

    .data-item {
      height: $row-line-height;
    }
  }

  table.static {
    position: relative;
    z-index: 5;
    width: $static-width;
    @include box-shadow(10px 0 5px -2px rgba(208, 208, 208, 0.4));

    .title,
    .subtitle {
      height: $row-line-height;
    }

    td > * {
      @include ellipsis(true);
    }
  }
  .scrollable {
    position: absolute;
    top: 0;
    left: $static-width;
    right: 0;
    z-index: 0;
    overflow-x: auto;

    table {
      width: 100%;
      th,
      td,
      td .data-item {
        text-align: right;
      }

      td:nth-child(2n) {
        background-color: $gray-lighter;
      }

      th:nth-child(2n) {
        background-color: #ebebeb;
      }
    }
  }

  table.static tr .options-icon {
    margin-left: 0.5rem;
    align-self: center;
    font-size: $font-size-large;
    color: $gray;
  }
}

.orders-report,
.billing-report {
  > thead {
    position: sticky;
    top: 0;
  }

  .data-item {
    clear: both;
    text-align: right;
    white-space: nowrap;

    .figure {
      text-align: right;
      font-weight: 400;

      &.small {
        font-size: 14px;
        line-height: 200%;
        font-weight: 400;
      }
    }
    .unit {
      font-size: 12px;
      font-weight: 400;
    }

    .figure,
    .unit {
      color: $gray-darker;
    }
  }
}

.order-target {
  .btn-group-justified {
    width: auto !important;
  }
}

